try fix postpage overflow bug

--- a/src/pages/blogpage/blogpage.scss
+++ b/src/pages/blogpage/blogpage.scss
@@ -24,6 +24,8 @@ $shadow: 0px 4px 20px rgba(64, 27, 32, 0.15);
     width: 70vw;
     @include smartphone() {
       width: 100%;
+      margin: 0;
+      padding: 0 10px;
     }
   }
   .sub-nav {
