--- a/src/pages/postpage/postpage.scss
+++ b/src/pages/postpage/postpage.scss
@@ -18,6 +18,7 @@ $secondaryColor: #ffffff;
 }
 .post-page {
   min-height: 100%;
+  width: 100%;
   .full-blog {
     text-align: left;
     .title {
